# rustlm

./: .gitignore  CHANGELOG.md  package-lock.json  package.json
.github/workflows/: release.yml  verify.yml
docs/: goodluck-environments.md
scripts/: run-test-build.cjs
src-tauri/: Cargo.toml  tauri.ci-updater.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/keys/: rustlm.key.pub
src-tauri/src/: cloud_profile_apply.rs  error.rs  lib.rs  state.rs  tray.rs
src-tauri/src/commands/: accounts.rs  auto_accept.rs  cloud_sync.rs  customization.rs  data_dragon.rs  goodluck.rs  login.rs  logs.rs  lol_config.rs  migration.rs  mod.rs  reveal.rs  riot_client.rs  rune_pages.rs  settings.rs  totp.rs
src-tauri/src/models/: account.rs  automation.rs  champion.rs  goodluck.rs  lcu_data.rs  league_client.rs  mod.rs  player.rs  rune.rs  settings.rs
src-tauri/src/services/: accounts_storage.rs  auto_accept.rs  cloud_sync.rs  crypto.rs  customization.rs  data_dragon.rs  file_logger.rs  goodluck_auth.rs  lol_config.rs  mod.rs  reveal.rs  riot_client.rs  rune_data.rs  rune_pages_storage.rs  settings.rs  uia_login.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/accounts/: layout.tsx  page.tsx
src/app/add-account/: page.tsx
src/app/automation/: page.tsx
src/app/configs/: page.tsx
src/app/customization/: page.tsx
src/app/info/: page.tsx
src/app/logs/: page.tsx
src/app/settings/: page.tsx
src/app/spy/: page.tsx
src/components/: auto-accept-provider.tsx  lolmanager-cleanup-dialog.tsx  rune-page-editor.tsx  sidebar.tsx  titlebar.tsx  totp-setup-dialog.tsx  totp-verify-dialog.tsx  tray-event-handler.tsx  update-check-dialog.tsx  window-init.tsx
src/components/ui/: select.tsx  tooltip.tsx  with-tooltip.tsx
src/lib/: changelog.ts  cloud-totp.ts  goodluck-display.ts  lol-servers.ts  post-login-sync.ts  tauri.ts
