[package]
name = "rustlm"
version = "0.2.1"
description = "League of Legends Account Manager"
authors = ["RaspizDIYs"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
goodluck-test = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-deep-link = "2"

# Async
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

# HTTP + WebSocket
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
native-tls = "0.2"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto (AES export/import)
aes = "0.8"
cbc = "0.1"
pbkdf2 = { version = "0.12", features = ["sha2"] }
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
urlencoding = "2"

# Logging
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error handling
thiserror = "2"
anyhow = "1"

# Misc
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tauri-plugin-updater = "2.10.0"
tauri-plugin-opener = "2"

# Windows-specific
[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.61", features = [
    "Win32_Security_Cryptography",
    "Win32_UI_Accessibility",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_System_Diagnostics_ToolHelp",
] }
